--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ ul{
     margin-bottom: 0;
 }
 
-.content-menu-header li a{
+.content-menu-header li a, .content-menu-footer li a{
     color: #ffffff;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 14px;
@@ -58,12 +58,12 @@ ul{
 .content-menu-header li:nth-child(2){
     border-left: none;
 }
-.content-menu-header li:hover{
+.content-menu-header li:hover, .content-menu-footer li:hover{
     background: #8aaa23;
 }
 .content-menu-header li{
     float: left;
-    padding: 8px 9px 0 7px;
+    padding: 8px 8px 0 7px;
     border-right: 1px solid #ae0470;
     border-left: 1px solid #d52796;
     height: 38px;
