--- a/manh.css
+++ b/manh.css
@@ -8,14 +8,14 @@ and open the template in the editor.
     Author     : Manh Pham
 */
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&subset=latin,vietnamese);
-.main-news-list h1{
+.main-news-details h1{
     font-family: "Arial";
     font-weight: 700;
     font-size: 20px;
     color: #b20371;
     margin-top: 12px !important;
 }
-.main-news-list p{
+.main-news-details p{
     font-family: "Arial";
     font-weight: 400;
     font-size: 11px;
@@ -127,7 +127,7 @@ and open the template in the editor.
     margin-top: 12px;
 }
 .sidebar-box ul li:nth-child(2n){
-    margin-left: 17px;
+    margin-left: 19px;
 }
 .sidebar-box ul li{
     width: 140px;
