--- a/style.css
+++ b/style.css
@@ -268,6 +268,12 @@ ul{
 }
 
 
+.list-news-box ul{
+    margin-bottom: 0;
+}
+.box-new-home{
+    margin-bottom: 15px;
+}
 .list-news-box {
     width: 300px;
     margin-left: 19px;
@@ -284,7 +290,7 @@ ul{
     border-bottom: 1px solid #ededed;
 }
 .list-news-box li:last-child {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     padding-bottom: 10px;
     border-bottom: none;
 }
@@ -310,16 +316,18 @@ ul{
     font-weight: 400;
 }
 .list-news-box ul li {
-border-bottom: 1px solid #f1f1f1;
-margin-top: 10px;
-padding-bottom: 10px;
-line-height: 24px;
+    border-bottom: 1px solid #f1f1f1;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    line-height: 24px;
 }
 
-.box-images img{
+.box-images-advertising{
     height: 95px;
     width: 620px;
-    margin-top: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    overflow: hidden;
 }
 
 
@@ -329,6 +337,7 @@ line-height: 24px;
     font-size: 14px;
     font-weight: bold;
     line-height: 18px;
+    margin-bottom: 15px;
 }
 .box-ad-home p{
     color: #6c6c6c;
@@ -357,4 +366,51 @@ line-height: 24px;
     width: 140px;
     height: 93px;
     margin-right: 10px;
+}
+.header-box-new-home a:first-child:after{
+    content: "";
+    background: url('images/bg-after-a.png') no-repeat;
+    top: 0px;
+    right: -15px;
+    position: absolute;
+    display: inline-block;
+    width: 20px;
+    height: 30px;
+}
+.header-box-new-home a:first-child:hover{
+    color: #fff;
+}
+.header-box-new-home a:first-child{
+    text-transform: uppercase;
+    background: #bd0478;
+    color: #fff;
+    margin-right: 15px;
+}
+.header-box-new-home a:hover{
+    color: #bd0478;
+}
+.header-box-new-home a{
+    color: #5b5b5b;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+    position: relative;
+    float: left;
+    padding:4px 10px;
+    font-weight: 400;
+}
+.header-box-new-home{
+    height: 30px;
+    border-bottom: 2px solid #bd0478;
+    margin-bottom: 15px;
+}
+
+.header-box-focal span{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 23px;
+    font-weight: 400;
+    color: #fff;
+}
+.header-box-focal{
+    height: 30px;
+    background: url(images/bg-box-title.png) no-repeat left center;
 }
