--- a/wp-content/themes/VCSS_FAMILYTODAY/style.css
+++ b/wp-content/themes/VCSS_FAMILYTODAY/style.css
@@ -1,3 +1,10 @@
+/*
+Theme Name: Family Today
+Author: Dean
+Author URI: https://facebook.com/thai.kont
+Version: 1.0.0
+*/
+
 /****************************************** Import font******************************/
 
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&subset=latin,vietnamese);
